fixed album overflow on album/id and other small changes

--- a/soundfront/static/album.css
+++ b/soundfront/static/album.css
@@ -34,3 +34,11 @@
 	font-size: 11px;
 	color: #7D8998;
 }
+
+.albumsidpage {
+	margin-top: 30px;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	column-gap: 40px;
+	row-gap: 15px;
+}
